Fix variable name for sol 48

--- a/mars_soil_analysis.ipynb
+++ b/mars_soil_analysis.ipynb
@@ -3,13 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "654c5a08-f6fe-4a28-a4e7-87125f4e61d2",
+   "id": "1f1f3e54-7ef4-4be0-b727-cc03607bde75",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import folium as fol"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -210,8 +209,8 @@
    ],
    "source": [
     "# Read the CSV file for sol 48 and display the first five rows of oxide data.\n",
-    "df_sol46 = pd.read_csv(\"data/apa_401715030rwp00480042100_______p1.csv\",skipinitialspace = True, quotechar='\"')\n",
-    "df_sol46.head()"
+    "df_sol48 = pd.read_csv(\"data/apa_401715030rwp00480042100_______p1.csv\",skipinitialspace = True, quotechar='\"')\n",
+    "df_sol48.head()"
    ]
   },
   {
@@ -233,7 +232,7 @@
    ],
    "source": [
     "# Use Matplotlib to create a bar chart.\n",
-    "plt.bar(df_sol46['oxide'],df_sol46['APXS analysis ver 2'])\n",
+    "plt.bar(df_sol48['oxide'],df_sol48['APXS analysis ver 2'])\n",
     "plt.xlabel(\"Chemical Oxides\")\n",
     "plt.ylabel(\"Percentage Rate (%)\")\n",
     "plt.title(\"The Most Common Elements in Martian Soil\")\n",
@@ -273,7 +272,7 @@
    ],
    "source": [
     "# Calculate the differences between the two sols and create a scatter plot.\n",
-    "differences = df['APXS analysis ver 2'] - df_sol46['APXS analysis ver 2']\n",
+    "differences = df['APXS analysis ver 2'] - df_sol48['APXS analysis ver 2']\n",
     "print(differences)"
    ]
   },
